--- a/Home.css
+++ b/Home.css
@@ -4,6 +4,7 @@ body{
     font-family: Courier;}
 
 header{
+    margin-top: 10px;
     margin-left: 60px;
     width: 90%;
     height: 40px;
@@ -24,6 +25,12 @@ header{
     font-size: 25px;
     font-family:'Palatino';}
 
+ofertas{
+    height: 225px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;}
+
 historia{ 
     height: 40px;
     width: 90%;
@@ -33,7 +40,7 @@ historia{
     align-items: center;
     font-size: 12.5px;
     color: white;
-    background-color: rgb(131, 0, 0);
+    background-color: rgb(255, 0, 0);
     border-radius: 5px;}
 
 .img {  
