--- a/Sitio Principal.css
+++ b/Sitio Principal.css
@@ -4,6 +4,7 @@ body{
     font-family: Courier;}
 
 header{
+    margin-top: 10px;
     margin-left: 60px;
     width: 90%;
     height: 40px;
@@ -25,7 +26,7 @@ header{
     font-family:'Palatino';}
 
 footer{
-    margin-top: 60px;
+    margin-top: 65px;
     margin-left: 60px;
     width: 90%;
     height: 40px;
@@ -53,7 +54,6 @@ p2{
     font-size: 12px;
     color: gray;}
 
-
 .enlace:visited {
     color: rgb(255, 187, 0);} 
         
@@ -64,4 +64,49 @@ p2{
     background-color: black;
     color: white;}
 
+*{ 
+    margin: 0;
+    padding: 0;}
 
+#lista { 
+    color: white;
+    margin-left: 60px;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;}
+
+.objetos {
+    color: rgb(255, 255, 255);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    margin-top: 37px;
+    width: 25%;
+    height: 70px;
+    background-color: rgb(255, 0, 0);
+    border-radius: 5px;}
+
+#total {
+    margin: auto;
+    margin-top: 35px;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    width: 23%;
+    display: flex;
+    justify-content: center;
+    background-color: black}
+
+[id^="stock"] {border-radius: 5px; width: 55%;}
+
+[id^="entrada"] {border-radius: 5px; width: 55%; margin-top: 3px;}
+
+[id^="btn"] {border-radius: 5px; width: 20%; margin-left: 2px; margin-top: 3px;}
+
+#resetButton {  
+    margin-top: 8px;
+    margin-left: 47%;
+    border-radius: 5px;}
